--- a/DWH/datawarehouse.ipynb
+++ b/DWH/datawarehouse.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -1263,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -1757,7 +1757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -1922,6 +1922,7 @@
     }
    ],
    "source": [
+    "#brand\n",
     "df_brand = merged_final[['brand_id', 'brand_name']].drop_duplicates()\n",
     "df_brand.fillna(value='Null', inplace=True)\n",
     "table_name_brand = 'Dim_Brand'\n",
@@ -2068,6 +2069,7 @@
     }
    ],
    "source": [
+    "#category\n",
     "df_Category=merged_final[['category_id','breadcrumb_category_id', 'breadcrumb_name']].drop_duplicates()\n",
     "df_Category['category_id'] = df_Category['category_id'].fillna(0).astype(int)\n",
     "table_name_brand = 'Dim_Category'\n",
@@ -2297,272 +2299,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sale_id</th>\n",
-       "      <th>all_time_quantity_sold</th>\n",
-       "      <th>quantity_sold</th>\n",
-       "      <th>original_price</th>\n",
-       "      <th>price</th>\n",
-       "      <th>discount</th>\n",
-       "      <th>discount_rate</th>\n",
-       "      <th>list_price</th>\n",
-       "      <th>price_usd</th>\n",
-       "      <th>order_count</th>\n",
-       "      <th>brand_id</th>\n",
-       "      <th>category_id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>54645</td>\n",
-       "      <td>855.0</td>\n",
-       "      <td>855.0</td>\n",
-       "      <td>328900</td>\n",
-       "      <td>267000</td>\n",
-       "      <td>61900</td>\n",
-       "      <td>19</td>\n",
-       "      <td>328900</td>\n",
-       "      <td>Null</td>\n",
-       "      <td>Null</td>\n",
-       "      <td>18984</td>\n",
-       "      <td>1804</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>54665</td>\n",
-       "      <td>5783.0</td>\n",
-       "      <td>5783.0</td>\n",
-       "      <td>261000</td>\n",
-       "      <td>217000</td>\n",
-       "      <td>44000</td>\n",
-       "      <td>17</td>\n",
-       "      <td>261000</td>\n",
-       "      <td>Null</td>\n",
-       "      <td>Null</td>\n",
-       "      <td>18984</td>\n",
-       "      <td>1815</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>122012</td>\n",
-       "      <td>137.0</td>\n",
-       "      <td>137.0</td>\n",
-       "      <td>399000</td>\n",
-       "      <td>399000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>399000</td>\n",
-       "      <td>Null</td>\n",
-       "      <td>Null</td>\n",
-       "      <td>18984</td>\n",
-       "      <td>1815</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>125781</td>\n",
-       "      <td>10198.0</td>\n",
-       "      <td>10198.0</td>\n",
-       "      <td>199000</td>\n",
-       "      <td>116000</td>\n",
-       "      <td>83000</td>\n",
-       "      <td>42</td>\n",
-       "      <td>199000</td>\n",
-       "      <td>Null</td>\n",
-       "      <td>Null</td>\n",
-       "      <td>18641</td>\n",
-       "      <td>1804</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>126000</td>\n",
-       "      <td>5144.0</td>\n",
-       "      <td>5144.0</td>\n",
-       "      <td>590000</td>\n",
-       "      <td>445000</td>\n",
-       "      <td>145000</td>\n",
-       "      <td>25</td>\n",
-       "      <td>590000</td>\n",
-       "      <td>Null</td>\n",
-       "      <td>Null</td>\n",
-       "      <td>18641</td>\n",
-       "      <td>1804</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36071</th>\n",
-       "      <td>263582266</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>8000</td>\n",
-       "      <td>8000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8000</td>\n",
-       "      <td>Null</td>\n",
-       "      <td>Null</td>\n",
-       "      <td>111461</td>\n",
-       "      <td>23244</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36072</th>\n",
-       "      <td>263582282</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>60800</td>\n",
-       "      <td>60800</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>60800</td>\n",
-       "      <td>Null</td>\n",
-       "      <td>Null</td>\n",
-       "      <td>689369</td>\n",
-       "      <td>8224</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36073</th>\n",
-       "      <td>263582336</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2022000</td>\n",
-       "      <td>2022000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2022000</td>\n",
-       "      <td>Null</td>\n",
-       "      <td>Null</td>\n",
-       "      <td>7426417</td>\n",
-       "      <td>4381</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36074</th>\n",
-       "      <td>263582341</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>79000</td>\n",
-       "      <td>79000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>79000</td>\n",
-       "      <td>Null</td>\n",
-       "      <td>Null</td>\n",
-       "      <td>623837</td>\n",
-       "      <td>2948</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36075</th>\n",
-       "      <td>263582509</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>130000</td>\n",
-       "      <td>130000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>130000</td>\n",
-       "      <td>Null</td>\n",
-       "      <td>Null</td>\n",
-       "      <td>111461</td>\n",
-       "      <td>28644</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>36076 rows × 12 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         sale_id  all_time_quantity_sold  quantity_sold  original_price  \\\n",
-       "0          54645                   855.0          855.0          328900   \n",
-       "1          54665                  5783.0         5783.0          261000   \n",
-       "2         122012                   137.0          137.0          399000   \n",
-       "3         125781                 10198.0        10198.0          199000   \n",
-       "4         126000                  5144.0         5144.0          590000   \n",
-       "...          ...                     ...            ...             ...   \n",
-       "36071  263582266                     0.0            0.0            8000   \n",
-       "36072  263582282                     0.0            0.0           60800   \n",
-       "36073  263582336                     0.0            0.0         2022000   \n",
-       "36074  263582341                     0.0            0.0           79000   \n",
-       "36075  263582509                     0.0            0.0          130000   \n",
-       "\n",
-       "         price  discount  discount_rate  list_price price_usd order_count  \\\n",
-       "0       267000     61900             19      328900      Null        Null   \n",
-       "1       217000     44000             17      261000      Null        Null   \n",
-       "2       399000         0              0      399000      Null        Null   \n",
-       "3       116000     83000             42      199000      Null        Null   \n",
-       "4       445000    145000             25      590000      Null        Null   \n",
-       "...        ...       ...            ...         ...       ...         ...   \n",
-       "36071     8000         0              0        8000      Null        Null   \n",
-       "36072    60800         0              0       60800      Null        Null   \n",
-       "36073  2022000         0              0     2022000      Null        Null   \n",
-       "36074    79000         0              0       79000      Null        Null   \n",
-       "36075   130000         0              0      130000      Null        Null   \n",
-       "\n",
-       "       brand_id  category_id  \n",
-       "0         18984         1804  \n",
-       "1         18984         1815  \n",
-       "2         18984         1815  \n",
-       "3         18641         1804  \n",
-       "4         18641         1804  \n",
-       "...         ...          ...  \n",
-       "36071    111461        23244  \n",
-       "36072    689369         8224  \n",
-       "36073   7426417         4381  \n",
-       "36074    623837         2948  \n",
-       "36075    111461        28644  \n",
-       "\n",
-       "[36076 rows x 12 columns]"
-      ]
-     },
-     "execution_count": 132,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 36076 entries, 0 to 36075\n",
+      "Data columns (total 29 columns):\n",
+      " #   Column                  Non-Null Count  Dtype  \n",
+      "---  ------                  --------------  -----  \n",
+      " 0   idx                     36076 non-null  int64  \n",
+      " 1   product_id              36076 non-null  int64  \n",
+      " 2   master_id               36076 non-null  object \n",
+      " 3   sku                     36076 non-null  object \n",
+      " 4   all_time_quantity_sold  36076 non-null  float64\n",
+      " 5   breadcrumb_name         36076 non-null  object \n",
+      " 6   breadcrumb_category_id  36076 non-null  object \n",
+      " 7   category_id             36076 non-null  int64  \n",
+      " 8   quantity_sold           36076 non-null  float64\n",
+      " 9   rating_average          36076 non-null  float64\n",
+      " 10  review_count            36076 non-null  int64  \n",
+      " 11  original_price          36076 non-null  int64  \n",
+      " 12  price                   36076 non-null  int64  \n",
+      " 13  discount                36076 non-null  int64  \n",
+      " 14  discount_rate           36076 non-null  int64  \n",
+      " 15  list_price              36076 non-null  int64  \n",
+      " 16  price_usd               36076 non-null  object \n",
+      " 17  order_count             36076 non-null  object \n",
+      " 18  inventory_status        36076 non-null  object \n",
+      " 19  is_visible              36076 non-null  object \n",
+      " 20  product_name            36076 non-null  object \n",
+      " 21  brand_id                36076 non-null  int64  \n",
+      " 22  brand_name              36076 non-null  object \n",
+      " 23  categories_name         36076 non-null  object \n",
+      " 24  description_short       36076 non-null  object \n",
+      " 25  day_ago_created         36076 non-null  int64  \n",
+      " 26  fulfillment_type        36076 non-null  object \n",
+      " 27  category                36076 non-null  object \n",
+      " 28  sort                    36076 non-null  object \n",
+      "dtypes: float64(3), int64(11), object(15)\n",
+      "memory usage: 8.0+ MB\n"
+     ]
     }
    ],
    "source": [
-    "Fact_Sales = merged_final[['product_id', 'all_time_quantity_sold', 'quantity_sold', 'original_price', 'price', 'discount', 'discount_rate', 'list_price', 'price_usd', 'order_count', 'brand_id', 'category_id']]\n",
-    "Fact_Sales = Fact_Sales.rename(columns={'product_id': 'sale_id'})\n",
-    "Fact_Sales"
+    "merged_final.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -2596,6 +2385,7 @@
        "      <th>list_price</th>\n",
        "      <th>price_usd</th>\n",
        "      <th>order_count</th>\n",
+       "      <th>product_id</th>\n",
        "      <th>brand_id</th>\n",
        "      <th>category_id</th>\n",
        "    </tr>\n",
@@ -2613,6 +2403,7 @@
        "      <td>328900</td>\n",
        "      <td>Null</td>\n",
        "      <td>Null</td>\n",
+       "      <td>54645</td>\n",
        "      <td>18984</td>\n",
        "      <td>1804</td>\n",
        "    </tr>\n",
@@ -2628,6 +2419,7 @@
        "      <td>261000</td>\n",
        "      <td>Null</td>\n",
        "      <td>Null</td>\n",
+       "      <td>54665</td>\n",
        "      <td>18984</td>\n",
        "      <td>1815</td>\n",
        "    </tr>\n",
@@ -2643,6 +2435,7 @@
        "      <td>399000</td>\n",
        "      <td>Null</td>\n",
        "      <td>Null</td>\n",
+       "      <td>122012</td>\n",
        "      <td>18984</td>\n",
        "      <td>1815</td>\n",
        "    </tr>\n",
@@ -2658,6 +2451,7 @@
        "      <td>199000</td>\n",
        "      <td>Null</td>\n",
        "      <td>Null</td>\n",
+       "      <td>125781</td>\n",
        "      <td>18641</td>\n",
        "      <td>1804</td>\n",
        "    </tr>\n",
@@ -2673,11 +2467,13 @@
        "      <td>590000</td>\n",
        "      <td>Null</td>\n",
        "      <td>Null</td>\n",
+       "      <td>126000</td>\n",
        "      <td>18641</td>\n",
        "      <td>1804</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -2703,6 +2499,7 @@
        "      <td>8000</td>\n",
        "      <td>Null</td>\n",
        "      <td>Null</td>\n",
+       "      <td>263582266</td>\n",
        "      <td>111461</td>\n",
        "      <td>23244</td>\n",
        "    </tr>\n",
@@ -2718,6 +2515,7 @@
        "      <td>60800</td>\n",
        "      <td>Null</td>\n",
        "      <td>Null</td>\n",
+       "      <td>263582282</td>\n",
        "      <td>689369</td>\n",
        "      <td>8224</td>\n",
        "    </tr>\n",
@@ -2733,6 +2531,7 @@
        "      <td>2022000</td>\n",
        "      <td>Null</td>\n",
        "      <td>Null</td>\n",
+       "      <td>263582336</td>\n",
        "      <td>7426417</td>\n",
        "      <td>4381</td>\n",
        "    </tr>\n",
@@ -2748,6 +2547,7 @@
        "      <td>79000</td>\n",
        "      <td>Null</td>\n",
        "      <td>Null</td>\n",
+       "      <td>263582341</td>\n",
        "      <td>623837</td>\n",
        "      <td>2948</td>\n",
        "    </tr>\n",
@@ -2763,12 +2563,13 @@
        "      <td>130000</td>\n",
        "      <td>Null</td>\n",
        "      <td>Null</td>\n",
+       "      <td>263582509</td>\n",
        "      <td>111461</td>\n",
        "      <td>28644</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>36076 rows × 12 columns</p>\n",
+       "<p>36076 rows × 13 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2798,31 +2599,31 @@
        "36074    79000         0              0       79000      Null        Null   \n",
        "36075   130000         0              0      130000      Null        Null   \n",
        "\n",
-       "       brand_id  category_id  \n",
-       "0         18984         1804  \n",
-       "1         18984         1815  \n",
-       "2         18984         1815  \n",
-       "3         18641         1804  \n",
-       "4         18641         1804  \n",
-       "...         ...          ...  \n",
-       "36071    111461        23244  \n",
-       "36072    689369         8224  \n",
-       "36073   7426417         4381  \n",
-       "36074    623837         2948  \n",
-       "36075    111461        28644  \n",
+       "       product_id  brand_id  category_id  \n",
+       "0           54645     18984         1804  \n",
+       "1           54665     18984         1815  \n",
+       "2          122012     18984         1815  \n",
+       "3          125781     18641         1804  \n",
+       "4          126000     18641         1804  \n",
+       "...           ...       ...          ...  \n",
+       "36071   263582266    111461        23244  \n",
+       "36072   263582282    689369         8224  \n",
+       "36073   263582336   7426417         4381  \n",
+       "36074   263582341    623837         2948  \n",
+       "36075   263582509    111461        28644  \n",
        "\n",
-       "[36076 rows x 12 columns]"
+       "[36076 rows x 13 columns]"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#sales\n",
-    "Fact_Sales = merged_final[['product_id', 'all_time_quantity_sold', 'quantity_sold', 'original_price', 'price', 'discount', 'discount_rate', 'list_price', 'price_usd', 'order_count', 'brand_id', 'category_id']]\n",
-    "Fact_Sales = Fact_Sales.rename(columns={'product_id': 'sales_id'})\n",
+    "Fact_Sales = merged_final[['master_id', 'all_time_quantity_sold', 'quantity_sold', 'original_price', 'price', 'discount', 'discount_rate', 'list_price', 'price_usd', 'order_count','product_id','brand_id', 'category_id']]\n",
+    "Fact_Sales = Fact_Sales.rename(columns={'master_id': 'sales_id'})\n",
     "\n",
     "table_name_brand = 'Fact_Sales'\n",
     "insert_ignore(Fact_Sales, table_name_brand, database_connection)\n",
